Fix for horizontal scrolling

--- a/phoneStyle.css
+++ b/phoneStyle.css
@@ -87,7 +87,6 @@ p {
 
 #letsGetStartedHolderInner{
   height:auto;
-  overflow: visible;
   padding-top: 10px;
 }
 
